# permit-pdp-client-rs

./: Cargo.toml  README.md  generate.sh
.openapi-generator/: FILES
docs/: AllTenantsAuthorizationResult.md  AuthorizationApiApi.md  AuthorizationQuery.md  AuthorizationQueryV1.md  AuthorizationResult.md  BulkAuthorizationResult.md  CallbackEntry.md  CallbacksApi.md  CloudApiProxyApi.md  DataUpdaterApi.md  HttpFetcherConfig.md  HttpMethods.md  KongAuthorizationInput.md  KongAuthorizationInputConsumer.md  KongAuthorizationInputRequest.md  KongAuthorizationInputRequestHttp.md  KongAuthorizationInputRoute.md  KongAuthorizationInputRouteService.md  KongAuthorizationInputService.md  KongAuthorizationQuery.md  KongAuthorizationResult.md  LocalQueriesApi.md  Message.md  PolicyStoreApi.md  PolicyStoreDetails.md  PolicyStoreTypes.md  PolicyUpdaterApi.md  Query.md  Resource.md  ResourceDetails.md  ResourceV1.md  SyncedRole.md  SyncedUser.md  TenantDetails.md  UrlAuthorizationQuery.md  User.md  UserPermissionsQuery.md  UserPermissionsResult.md  UserTenantsQuery.md
src/apis/: authorization_api_api.rs  callbacks_api.rs  cloud_api_proxy_api.rs  configuration.rs  data_updater_api.rs  local_queries_api.rs  mod.rs  policy_store_api.rs  policy_updater_api.rs
src/models/: _resource_details.rs  _tenant_details.rs  _user_permissions_result.rs  all_tenants_authorization_result.rs  authorization_query.rs  authorization_query_v1.rs  authorization_result.rs  bulk_authorization_result.rs  callback_entry.rs  http_fetcher_config.rs  http_methods.rs  http_validation_error.rs  kong_authorization_input.rs  kong_authorization_input_consumer.rs  kong_authorization_input_request.rs  kong_authorization_input_route.rs  (+20 more)
