[package]
name = "permit-pdp-client-rs"
version = "0.2.0"
authors = ["OpenAPI Generator team and contributors"]
description = "The PDP (Policy decision point) container wraps Open Policy Agent (OPA) with a higher-level API intended for fine grained application-level authorization. The PDP automatically handles pulling policy updates in real-time from a centrally managed cloud-service (api.permit.io)."
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^3.9"
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.10", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json", "multipart", "rustls-tls"]
